syntax = "proto3";

package werewolf;
option java_package="jiang.sichu.werewolf.proto";

service GameService {
    // Group of room operations
    rpc CreateAndJoinRoom (CreateAndJoinRoomRequest) returns (CreateAndJoinRoomResponse);
    rpc UpdateGameConfig (UpdateGameConfigRequest) returns (UpdateGameConfigResponse);
    rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse);
    rpc GetRoom (GetRoomRequest) returns (GetRoomResponse);
    rpc TakeSeat (TakeSeatRequest) returns (TakeSeatResponse);
    rpc ReassignRoles (ReassignRolesRequest) returns (ReassignRolesResponse);

    // group of game operations
    rpc StartGame (StartGameRequest) returns (StartGameResponse);
    rpc GetGame (GetGameRequest) returns (GetGameResponse);
    rpc TakeAction (TakeActionRequest) returns (TakeActionResponse);
}

message CreateAndJoinRoomRequest {}

message CreateAndJoinRoomResponse {
    string room_id = 1;
    string user_id = 2;
}

message UpdateGameConfigRequest {

    string room_id = 1;

    message RoleCount {
        Role role = 1;
        int32 count = 2;
    }
    repeated RoleCount role_counts = 2;
}

message UpdateGameConfigResponse {}

message JoinRoomRequest {
    string user_id = 1;
    string room_id = 2;
}

message JoinRoomResponse {
    string user_id = 1;
}

message GetRoomRequest {
    string room_id = 1;
}

message GetRoomResponse {
    repeated Seat seats = 2;
    string game_id = 3;
}

message TakeSeatRequest {
    string seat_id = 1;
    string user_id = 2;
}

message TakeSeatResponse {}

message ReassignRolesRequest {
    string room_id = 1;
}

message ReassignRolesResponse {}

message StartGameRequest {
    string room_id = 1;
}

message StartGameResponse {
    string game_id = 2;
}

message GetGameRequest {
    string game_id = 1;
}

message GetGameResponse {
    Game game = 1;
}

message TakeActionRequest {
    string game_id = 1;

    message SeerAction {}
    message WitchAction {}
    message HunterAction {}
    message GuardAction {}
    message WerewolfAction {}
    message WhiteWerewolfAction {}
    message HalfBloodAction {}
    oneof action {
        SeerAction seer = 2;
        WitchAction witch = 3;
        HunterAction hunter = 4;
        GuardAction guard = 5;
        WerewolfAction werewolf = 6;
        WhiteWerewolfAction white_werewolf = 7;
        HalfBloodAction half_blood = 8;
    }
}

message TakeActionResponse {}

message Seat {
    string id = 1;
    User user = 2;
    Role role = 3;
}

message User {
    string id = 1;
    string img_url = 3;
}

message Game {
    string id = 1;

    enum State {
        UNKNOWN = 0;
        DARKNESS_FALLS = 1;
        ORPHAN_AWAKE = 2;
        HALF_BLOOD_AWAKE = 3;
        GUARDIAN_AWAKE = 4;
        WEREWOLF_AWAKE = 5;
        WITCH_AWAKE = 6;
        SEER_AWAKE = 7;
        HUNTER_AWAKE = 8;
        SHERIFF_ELECTION = 9;
    }
    State state = 3;

    repeated string dead_player_numbers = 4;
}

enum Role {
    UNKNOWN = 0;
    VILLAGER = 1;
    SEER = 2;
    WITCH = 3;
    HUNTER = 4;
    IDIOT = 5;
    GUARDIAN = 6;
    WEREWOLF = 7;
    WHITE_WEREWOLF = 8;
    ORPHAN = 9;
    HALF_BLOOD = 10;
}
